78 matselect icon not vertically aligned issue is fixed

--- a/_common.scss
+++ b/_common.scss
@@ -258,10 +258,6 @@
             .mat-form-field-subscript-wrapper {
                 padding: $ltrOutlinePadding;
             }
-            &.mat-form-field-should-float .mat-form-field-infix {
-                margin-top: -0.125rem;
-                margin-bottom: 0.125rem;
-            }
             .mat-form-field-suffix,
             .mat-form-field-prefix {
                 margin-bottom: 0.25rem;
@@ -277,9 +273,6 @@
             .mat-form-field-suffix,
             .mat-form-field-prefix {
                 margin-bottom: 0.75rem;
-            }
-            .mat-form-field-infix {
-                padding-top: 0.125rem;
             }
         }
 
